All methods using collectors.toList updated to toList();